--- a/src/locales/locales.json
+++ b/src/locales/locales.json
@@ -8,7 +8,7 @@
 
 	"uz": {
 		"start": {
-			"text": "Botga xush kelibsiz. Ism familiyangizni kiriting",
+			"text": "Assalom alekum botimizga xush kelibsiz! Telefon raqamingizni bizga yuborish  uchun ⬇️ tugmani bosing",
 			"warning_text": "Siz botdan ro'yxatdan o'tib bo'lgansiz",
 			"stiker": "../../assets/stiker/uz.png"
 		},
@@ -71,7 +71,70 @@
 
 	"ru": {
 		"start": {
-			"text": "Добро пожаловать в наш бот. Введите ваше имя и фамилию",
+			"text": "Добро пожаловать в наш бот! Нажмите кнопку ⬇️, чтобы отправить нам свой номер телефона",
+			"warning_text": "Вы уже зарегистрированы в боте",
+			"stiker": "../../assets/stiker/ru.png"
+		},
+		"name": {
+			"text": "Введите дату рождения \n\n<i> (например: 2022-03-22) </i>",
+			"error_text": "Пожалуйста, введите свое полное имя"
+		},
+		"date": {
+			"text": "Введите свой пол",
+			"keyboard": [["Мужской", "Женский"]],
+			"error_text": "Введите дату своего рождения, как показано \n\n <i>например: 2022-03-22 </i>"
+		},
+		"gender": {
+			"text": "Введите номер телефона",
+			"keyboard": [
+				[
+					{
+						"text": "Номер телефона",
+						"request_contact": true
+					}
+				]
+			],
+			"error_text": "Пожалуйста, введите свой пол"
+		},
+		"number": {
+			"text": "<b> Это ваш QR-код 🖼 </b> \n\n📠 Вы можете использовать этот код на кассе.",
+			"keyboard": [["🖼 QR-код", "💸Баланс"], ["✍️ Оставить отзыв"]],
+			"error_text": "Пожалуйста, введите ваш номер телефона"
+		},
+		"call": {
+			"text": "☎️ Для информации:: <b>+998 94 652 42 42</b>",
+			"balanceText": "⚠️ Если у вас возникли проблемы с вашей личной информацией и балансом, пожалуйста, свяжитесь с @Citycardtech."
+		},
+		"review": {
+			"text": "Оцените наш сервис по 5 бальной шкале и помогите нам!",
+			"text_reason": "Почему вы сделали такую оценку?",
+			"text_thanks": "Спасибо за Ваше внимание!",
+			"filial_text": "Выберите филиал",
+			"filial": [["Домбирабад"]],
+			"keyboard": [
+				["Отлично ❤️"],
+				["Хорошо 👍"],
+				["Нормально ⭐️"],
+				["Плохо 😒"],
+				["Очень плохо 😡"],
+				["⬅️ Назад"]
+			]
+		},
+		"rank": {
+			"Отлично ❤️": 5,
+			"Хорошо 👍": 4,
+			"Нормально ⭐️": 3,
+			"Плохо 😒": 2,
+			"Очень плохо 😡": 1
+		},
+		"error": {
+			"text": "Пожалуйста, введите данные полностью"
+		}
+	},
+
+	"en": {
+		"start": {
+			"text": "Welcome to our bot! Click the ⬇️ button to send us your phone number",
 			"warning_text": "Вы уже зарегистрированы в боте",
 			"stiker": "../../assets/stiker/ru.png"
 		},
